<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDetail"
    tools:context=".ui.detail.DetailFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardElevation="20dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/movieImageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_image_size"
                android:contentDescription="@string/image_for_detail_fragment"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/margin_standard">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/userImageView"
                android:layout_width="@dimen/user_profile_detail_size"
                android:layout_height="@dimen/user_profile_detail_size" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/userNameTextView"
                android:layout_width="wrap_content"
                style="@style/PhotoInspiration.PhotoTitleDetail"
                tools:text="Title"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/padding_half">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/PhotoInspiration.PhotoSubTitle"
                android:ellipsize="end"
                android:paddingStart="@dimen/padding_half"
                android:paddingEnd="@dimen/padding_half"
                android:text="@string/location"
                android:textAlignment="textEnd" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/userLocationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/PhotoInspiration.PhotoDescription"
                android:layout_marginStart="@dimen/margin_half"
                android:textAlignment="center"
                tools:text="Prague, Czech Republic" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/PhotoInspiration.PhotoSubTitle"
            android:ellipsize="end"
            android:paddingStart="@dimen/padding_standard"
            android:paddingEnd="@dimen/padding_standard"
            android:text="@string/bio"
            android:textAlignment="textEnd" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/userBioTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PhotoInspiration.PhotoDescription"
            android:layout_marginStart="@dimen/margin_half"
            android:padding="@dimen/padding_standard"
            tools:text="Awesome focus and creative boost here www.madmonq.gg/jerry" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>
